# dotfiles

./: .chezmoiignore  .opencode.json  2025-07-09-caveat-the-messages-below-were-generated-by-the-u.txt  AGENTS.md.tmpl  ARCHIVE_PROJECT_WISDOM.md  BASH_TESTING_GUIDE.md  CLAUDE.md  CLAUDE.md.old  CLAUDE.md.tmpl  CLAUDE_COMMANDS_LOG.md  CURRENT_PROJECT_WISDOM.md  HANDOFF.md  LICENSE  OpenCode.md  PROJECT_WISDOM.md  README.md  SESSION_20250529_150000.md  SESSION_20250530_005700.md  WORKING_WITH_CLAUDE.md  bash_shell_hints  dot_bash_shell_hints  dot_bashrc.tmpl  dot_bashrc_custom  dot_bashrc_debian  dot_emacs-bootstrap.md  dot_envrc  dot_gitconfig  dot_ripgreprc  ps_shell_hints  run_before_10-mcfly-import.sh.tmpl  run_once_after_20-wsl-config.sh.tmpl  run_once_before_10-mcfly-import.sh.tmpl  run_onchange_after_50-windows-terminal.ps1.tmpl
.chezmoitemplates/: agent-python-uv.md.tmpl  agent-screenshot-intent.md.tmpl  gitconfig
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
dot_claude/: .chezmoiignore  CLAUDE.md  CLAUDE_METHODOLOGY.md  COMMANDS.md  IMPROVEMENT_SUMMARY.md  PROJECT_MAP.md  REFACTORING_EXPLAINED.md  SESSION_MANAGEMENT_WORKFLOW.md  WORKING_WITH_CLAUDE.md  claude_config_improvement_plan.md  settings.local.json  symlink_skills
dot_config/: cargo_install.txt  starship.toml
dot_gemini/: settings.json
mcfly_backups/: encrypted_mcfly_black_87d2c936.db.gpg  (+1 more)
tools/: CLAUDE.md  (+1 more)
tools/claude-hooks/: README.md  hooks.json  pyproject.toml  test-hooks.sh
tools/claude-hooks/src/claude_hooks/: __init__.py  __main__.py  formatters.py  main.py  validators.py
(+246 files in other folders)
