[project]
name = "claude-hooks"
version = "0.1.0"
description = "Claude Code hooks for enforcing development standards"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
claude-hooks = "claude_hooks.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.black]
line-length = 100
target-version = ["py312"]